fix: address pr 767 review feedback
Signed-off-by: Cecil Foubert <Cfoubert0782@conestogac.on.ca>